[package]
name = "tree-sitter-cql"
description = "cql grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "cql"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/mgramigna/tree-sitter-cql"
edition = "2018"
license = "Apache-2.0"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.3"

[build-dependencies]
cc = "1.0"
